--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,13 @@
   font-family: "Libre Baskerville";
 }
 
+#head-content {
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 999;
+}
+
 nav {
   display: flex;
   justify-content: space-between;
@@ -76,6 +83,14 @@ nav .fa-bars {
   padding: 5px 7px;
 }
 
+.row {
+  display: flex;
+  margin-top: 5%;
+  justify-content: space-between;
+}
+
+/* main course */
+
 .main-course {
   height: 100vh;
   width: 100%;
@@ -104,6 +119,7 @@ nav .fa-bars {
   color: #fff;
   font-size: 18px;
   font-weight: bold;
+  text-transform: capitalize;
 }
 
 .main-btn {
@@ -147,21 +163,118 @@ nav .fa-bars {
   padding: 5px 7px;
 }
 
+/* Facilities */
+
 .Facilities {
   text-align: center;
-  padding-top: 40px;
-  width: 100%;
+  padding-top: 100px;
+  width: 80%;
+  margin: auto;
 }
 
-.row {
-  display: flex;
-  justify-content: space-between;
-  background-color: beige;
-  border-radius: 20px;
+.Facilities h1 {
+  font-size: 30px;
+  font-weight: bold;
+  margin: 10px 0;
+}
+
+.Facilities p {
+  font-size: 14px;
+  padding: 10px;
+  line-height: 22px;
+  font-weight: 300;
+  color: #000;
+  margin-bottom: 20px;
+}
+
+.pro {
+  font-weight: lighter;
+}
+
+.strong {
+  font-weight: bold;
+}
+
+.facilities-row .fa-water-ladder,
+.fa-dumbbell,
+.fa-car {
+  font-size: 20px;
+  background-color: #a5b452;
+  color: #fff;
+  border-radius: 50%;
+  padding: 20px;
 }
 
 .facilities-row {
   padding: 15px 20px;
+}
+
+/* Gallery */
+
+.gallery {
+  text-align: center;
+  padding-top: 50px;
+  margin: auto;
+  width: 100%;
+}
+
+.gallery-hall {
+  padding: 5px 8px;
+  position: relative;
+  overflow: hidden;
+  /* border-radius: 10px; */
+  /* flex-basis: 50%; */
+}
+
+.gallery-row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 5%;
+}
+
+.gallery-row > div {
+  width: 25%;
+}
+
+.gallery-hall img {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  display: block;
+}
+
+.layer {
+  background: transparent;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  transition: 0.5s;
+}
+
+.layer:hover {
+  border-radius: 10px;
+  background: rgba(165, 162, 82, 0.5);
+}
+
+.layer h3 {
+  width: 100%;
+  font-weight: 500;
+  font-size: 20px;
+  color: #fff;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  transition: 0.5s;
+  opacity: 0;
+}
+.layer:hover h3 {
+  bottom: 45%;
+  opacity: 1;
 }
 
 @media screen and (max-width: 700px) {
