--- a/css/style.css
+++ b/css/style.css
@@ -477,7 +477,7 @@ nav .fa-bars {
 
 .contact-col input,
 .contact-col textarea {
-  width: 100%;
+  width: 90%;
   padding: 15px;
   margin-bottom: 17px;
   outline: none;
@@ -533,6 +533,7 @@ footer .social-icons .fa-brands {
     text-align: left;
     z-index: 2;
     transition: 1s;
+    backdrop-filter: blur(1rem);
   }
 
   nav .fa-xmark,
