replaced the main background img

--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ nav .fa-bars {
   height: 100vh;
   width: 100%;
   background-image: linear-gradient(rgba(4, 9, 30, 0.5), rgba(4, 9, 30, 0.5)),
-    url("../img/pexels-photo-106399.jpeg");
+    url("../img/house2.avif");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
