--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px 20px;
+  padding: 15px 30px;
   background-color: beige;
 }
 
@@ -492,14 +492,64 @@ nav .fa-bars {
   color: beige;
 }
 
+/* About Us */
+.About-Us {
+  padding-top: 50px;
+  width: 90%;
+  height: 50%;
+  margin: 10px auto;
+  display: flex;
+  gap: 30px;
+}
+
+.why-text h1 {
+  margin-bottom: 40px;
+}
+
+.why-text {
+  text-align: center;
+  border-radius: 10px;
+  box-shadow: 5px 10px 15px rgba(165, 162, 82, 0.6);
+  padding: 10px;
+  width: 100%;
+  height: auto;
+}
+
+.why-text p {
+  font-size: 14px;
+  line-height: 1.7em;
+}
+
+.stat {
+  text-align: center;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 5px 10px 15px rgba(165, 162, 82, 0.6);
+  width: 100%;
+  height: 500px;
+}
+
+.stat h1 {
+  margin-bottom: 40px;
+}
+
+.stat .mission {
+  margin-top: 50px;
+}
+
+.stat p {
+  font-size: 14px;
+  line-height: 1.7em;
+}
+
 /* Footer */
 
 footer {
   background: beige;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  padding: 30px 0;
+  padding: 30px 60px;
   text-align: center;
   box-shadow: 0 5px 15px rgba(165, 162, 82, 0.5);
 }
@@ -537,7 +587,7 @@ footer .social-icons .fa-brands {
     right: -200px;
     text-align: left;
     z-index: 2;
-    transition: 1s;
+    transition: 0.5s ease;
     backdrop-filter: blur(1rem);
   }
 
@@ -579,7 +629,6 @@ footer .social-icons .fa-brands {
     justify-content: space-evenly;
     margin-top: 40px;
   }
-
   .QandA-row > div {
     width: 100%;
   }
@@ -614,6 +663,11 @@ footer .social-icons .fa-brands {
   }
   .social-icons {
     margin-top: 10px;
+  }
+
+  .About-Us {
+    flex-direction: column;
+    width: 90%;
   }
 }
 
